fix some letter spacing, line height, change &hellip; to ... to avoid ugly glyph

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -54,7 +54,7 @@ html, body
   width: 100vw
   min-width: 300px
   font-family: 'NanumMyeongjo', serif
-  letter-spacing: .09em
+  letter-spacing: .08em
   font-size: 120%
   background-color: $background-color
   color: $main-text-color
@@ -204,7 +204,7 @@ h1
   overflow-y: auto
   height: 75vh
   font-size: 80%
-  line-height: 1.6
+  line-height: 1.45
 
 #shows-page
   // background-image: $shows-page-bg
